# math

./: CMakeLists.txt
cmake/modules/: lib_extensions.cmake
include/: math.h  math_utils.h  math_utils.tpp
src/: math.cpp  math_utils.cpp
tests/: .math_tests.cpp.swp  CMakeLists.txt  math_tests.cpp  math_tests_exec.cpp
